--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -33,6 +33,9 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: echo job1-ubuntu
         run: echo "job1-ubuntu"
+      - name: Exec script.ps1
+        shell: pwsh
+        run: ./bin/script.ps1
       # - name: Test
       #   run: docker compose run --rm app sh -c "python manage.py wait_for_db && python manage.py test"
       # - name: Lint
