--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -27,7 +27,8 @@ jobs:
           ls -la .github/actions/docker-login
         
       - name: Login to Docker Hub
-        uses: docker/login-action@v3
+        # uses: docker/login-action@v3
+        uses: ./.github/actions/docker-login
         with:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
