--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -27,12 +27,16 @@ jobs:
           ls -la .github/actions/docker-login
         
       - name: Login to Docker Hub
-        uses: docker/login-action@v3
+        # uses: docker/login-action@v3
+        uses: ./.github/actions/docker-login
         with:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: echo job1-ubuntu
         run: echo "job1-ubuntu"
+      - name: Exec script.ps1
+        shell: pwsh
+        run: ./bin/script.ps1
       # - name: Test
       #   run: docker compose run --rm app sh -c "python manage.py wait_for_db && python manage.py test"
       # - name: Lint
